[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "backle"
dynamic = [
  'version'
]
readme = "README.md"
authors = [
  { name = 'Scott Caratozzolo' },
]
requires-python = '>=3.8'
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.4.0",
    "yfinance>=0.2.4",
    "pandas-market-calendars>=4.1.3",
    "tqdm>=4.64.1",
    "pytz>=2022.7.1",
    "loguru>=0.6.0",
    "pyfolio-reloaded>=0.9.5",
    "quantstats>=0.0.59",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Topic :: Office/Business :: Financial :: Investment',
    'Topic :: Scientific/Engineering :: Information Analysis',
]

[project.urls]
homepage = 'https://github.com/scaratozzolo/backle'
repository = 'https://github.com/scaratozzolo/backle'

[tool.setuptools.packages.find]
include = ["backle"]

[tool.setuptools_scm]
write_to = "backle/_version.py"
version_scheme = 'python-simplified-semver'
local_scheme = "no-local-version"

[project.optional-dependencies]
